convert java 25 pem encodings to executable example